<resources>
    <string name="empty"></string>
    <string name="app_name">Vulpes</string>
    <string name="detailsBtn">Детали</string>
    <string name="filmList">Список фильмов</string>
    <string name="chooser">Пригласить через...</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exitQuestion">Вы уверены, что хотите выйти?</string>
    <string name="deleteBtn">Удалить</string>
    <string name="addBtn">Добавить</string>
    <string name="addToFavourite">Добавлено в избранное</string>
    <string name="deletedFromFavourite">Удалено из избранного</string>
    <string name="mainScreen">Главная</string>
    <string name="favouritesScreen">Избранное</string>
    <string name="nightMode">Ночной режим</string>
    <string name="invite">Пригласить друга</string>
    <string name="exit">Выход</string>
    <string name="serviceDesc">Сервис по поиску фильмов</string>
    <string name="cancel">Отмена</string>
    <string name="favouritesFragmentName">Избранное</string>

    <string name="mainActivityTitle">Список фильмов</string>
    <string name="sweeneyToddFilm">Суини Тодд, демон-парикмахер с Флит-стрит</string>
    <string name="harryPotter1Film">Гарри Поттер и философский камень</string>
    <string name="dogsPurposeFilm">Собачья жизнь</string>
    <string name="ageOfAdalineFilm">Век Адалин</string>
    <string name="theAvengersFilm">Мстители</string>
    <string name="morningGloryFilm">Доброе утро</string>
    <string name="theLordOfTheRings1Film">Властелин колец: Братство кольца</string>
    <string name="klausFilm">Клаус</string>
    <string name="treasurePlanetFilm">Планета сокровищ</string>
    <string name="theNightmareBeforeChristmasFilm">Кошмар перед Рождеством</string>
    <string name="cocoFilm">Тайна Коко</string>
</resources>
