<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="navigationView">

    <group android:checkableBehavior="single">
        <group android:checkableBehavior="single" android:id="@+id/firstGroup">
            <item
                android:id="@+id/mainScreen"
                android:icon="@drawable/home"
                android:title="@string/mainScreen" />
            <item
                android:id="@+id/favouritesScreen"
                android:icon="@drawable/favourite"
                android:title="@string/favouritesScreen" />
        </group>
        <group android:checkableBehavior="single" android:id="@+id/secondGroup">
            <item
                android:id="@+id/mode"
                android:icon="@drawable/night_mode"
                android:title="@string/nightMode"
                app:actionLayout="@layout/night_mode_switch" />
            <item
                android:id="@+id/invite"
                android:icon="@drawable/send"
                android:title="@string/invite" />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/exit"
                android:title="@string/exit" />
        </group>
    </group>
</menu>